cmake_minimum_required(VERSION 4.1)
project(introduction_to_programming_with_cpp)

set(CMAKE_CXX_STANDARD 20)

# --- ENFORCE STRICT WARNINGS ---
add_compile_options(-Wall -Wextra -Werror)

# --- CHAPTER XX ---
# Syntax: add_executable(NAME_OF_RUN_CONFIG PATH_TO_FILE

# --- CHAPTER 1 ---
# Skipped

# --- CHAPTER 2 ---
add_executable(ch02-ex01 chapter-2-elementary-programming/ex01.cpp)
add_executable(ch02-ex02 chapter-2-elementary-programming/ex02.cpp)
add_executable(ch02-ex03 chapter-2-elementary-programming/ex03.cpp)
add_executable(ch02-ex04 chapter-2-elementary-programming/ex04.cpp)
add_executable(ch02-ex05 chapter-2-elementary-programming/ex05.cpp)
add_executable(ch02-ex06 chapter-2-elementary-programming/ex06.cpp)
add_executable(ch02-ex07 chapter-2-elementary-programming/ex07.cpp)
add_executable(ch02-ex08 chapter-2-elementary-programming/ex08.cpp)

# --- CHAPTER 3 ---


# --- CHAPTER 4 ---


# --- CHAPTER 5 ---


# --- CHAPTER 6 ---


