cmake_minimum_required(VERSION 4.1)
project(introduction_to_programming_with_cpp)

set(CMAKE_CXX_STANDARD 20)

# --- ENFORCE STRICT WARNINGS ---
add_compile_options(-Wall -Wextra -Werror)

# --- CHAPTER XX ---
# Syntax: add_executable(NAME_OF_RUN_CONFIG PATH_TO_FILE

# --- CHAPTER 1 ---
# Skipped

# --- CHAPTER 2 ---
add_executable(ch02-ex01 chapter-2-elementary-programming/ex01.cpp)
add_executable(ch02-ex02 chapter-2-elementary-programming/ex02.cpp)
add_executable(ch02-ex03 chapter-2-elementary-programming/ex03.cpp)
add_executable(ch02-ex04 chapter-2-elementary-programming/ex04.cpp)
add_executable(ch02-ex05 chapter-2-elementary-programming/ex05.cpp)
add_executable(ch02-ex06 chapter-2-elementary-programming/ex06.cpp)
add_executable(ch02-ex07 chapter-2-elementary-programming/ex07.cpp)
add_executable(ch02-ex08 chapter-2-elementary-programming/ex08.cpp)
add_executable(ch02-ex09 chapter-2-elementary-programming/ex09.cpp)
add_executable(ch02-ex10 chapter-2-elementary-programming/ex10.cpp)
add_executable(ch02-ex12 chapter-2-elementary-programming/ex12.cpp)
add_executable(ch02-ex13 chapter-2-elementary-programming/ex13.cpp)
add_executable(ch02-ex14 chapter-2-elementary-programming/ex14.cpp)
add_executable(ch02-ex17 chapter-2-elementary-programming/ex17.cpp)
add_executable(ch02-ex19 chapter-2-elementary-programming/ex19.cpp)
add_executable(ch02-ex20 chapter-2-elementary-programming/ex20.cpp)
add_executable(ch02-ex21 chapter-2-elementary-programming/ex21.cpp)
add_executable(ch02-ex22 chapter-2-elementary-programming/ex22.cpp)
add_executable(ch02-ex23 chapter-2-elementary-programming/ex23.cpp)

# --- CHAPTER 3 ---
add_executable(ch03-ex01 chapter-3-selections/ex01.cpp)
add_executable(ch03-ex03 chapter-3-selections/ex03.cpp)


# --- CHAPTER 4 ---


# --- CHAPTER 5 ---


# --- CHAPTER 6 ---


